--- a/index.html
+++ b/index.html
@@ -7,6 +7,203 @@
     <title>Social Media Dashboard</title>
   </head>
   <body>
+    <header class="flex-content">
+      <div class="title-content">
+        <h1>Social Media Dashboard</h1>
+        <p>Total Followers: <span id="total_followers">23,004</span></p>
+      </div>
+      <div class="dark-mode flex-content">
+        <p>Dark Mode</p>
+        <label class="switch">
+          <input type="checkbox" />
+          <span class="slider round"></span>
+        </label>
+      </div>
+    </header>
+
+    <main>
+      <section class="all-social-medias grid-content">
+        <div class="social-medias flex-content facebook">
+          <div class="social-medias-user flex-content">
+            <img src="./img/icon-facebook.svg" alt="icon facebook" />
+            <p>@muriloviscondi</p>
+          </div>
+          <div class="total-followers flex-content">
+            <p id="all-followers-facebook" class="all-followers">1987</p>
+            <p>Followers</p>
+          </div>
+          <div class="review flex-content">
+            <img src="./img/icon-up.svg" alt="icon up" />
+            <p class="up">12 Today</p>
+          </div>
+        </div>
+
+        <div class="social-medias flex-content twitter">
+          <div class="social-medias-user flex-content">
+            <img src="./img/icon-twitter.svg" alt="icon twitter" />
+            <p>@muriloviscondi</p>
+          </div>
+          <div class="total-followers flex-content">
+            <p id="all-followers-twitter" class="all-followers">1044</p>
+            <p>Followers</p>
+          </div>
+          <div class="review flex-content">
+            <img src="./img/icon-up.svg" alt="icon up" />
+            <p class="up">99 Today</p>
+          </div>
+        </div>
+
+        <div class="social-medias flex-content instagram">
+          <div class="social-medias-user flex-content">
+            <img src="./img/icon-instagram.svg" alt="icon instagram" />
+            <p>@muriloviscondi</p>
+          </div>
+          <div class="total-followers flex-content">
+            <p id="all-followers-instagram" class="all-followers">11k</p>
+            <p>Followers</p>
+          </div>
+          <div class="review flex-content">
+            <img src="./img/icon-up.svg" alt="icon up" />
+            <p class="up">1099 Today</p>
+          </div>
+        </div>
+
+        <div class="social-medias flex-content youtube">
+          <div class="social-medias-user flex-content">
+            <img src="./img/icon-youtube.svg" alt="icon youtube" />
+            <p>@muriloviscondi</p>
+          </div>
+          <div class="total-followers flex-content">
+            <p id="all-followers-youtube" class="all-followers">8239</p>
+            <p>subscribers</p>
+          </div>
+          <div class="review flex-content">
+            <img src="./img/icon-down.svg" alt="icon down" />
+            <p class="down">144 Today</p>
+          </div>
+        </div>
+      </section>
+
+      <section class="overview">
+        <header>
+          <h2>Overview - Today</h2>
+        </header>
+
+        <div class="all-views grid-content">
+          <div id="facebook-users" class="views">
+            <div class="views-title flex-content">
+              <h3>Page Views</h3>
+              <img src="./img/icon-facebook.svg" alt="icon facebook" />
+            </div>
+            <div class="views-content flex-content">
+              <p class="total">87</p>
+              <div class="flex-content">
+                <img src="./img/icon-up.svg" alt="icon up" />
+                <p class="up">3%</p>
+              </div>
+            </div>
+          </div>
+
+          <div id="facebook-like" class="views">
+            <div class="views-title flex-content">
+              <h3>Likes</h3>
+              <img src="./img/icon-facebook.svg" alt="icon facebook" />
+            </div>
+            <div class="views-content flex-content">
+              <p class="total">52</p>
+              <div class="flex-content">
+                <img src="./img/icon-down.svg" alt="icon up" />
+                <p class="down">2%</p>
+              </div>
+            </div>
+          </div>
+
+          <div id="instagram-likes" class="views">
+            <div class="views-title flex-content">
+              <h3>Likes</h3>
+              <img src="./img/icon-instagram.svg" alt="icon instagram" />
+            </div>
+            <div class="views-content flex-content">
+              <p class="total">5462</p>
+              <div class="flex-content">
+                <img src="./img/icon-up.svg" alt="icon up" />
+                <p class="up">2257%</p>
+              </div>
+            </div>
+          </div>
+
+          <div id="instagram-profile-views" class="views">
+            <div class="views-title flex-content">
+              <h3>Profile Views</h3>
+              <img src="./img/icon-instagram.svg" alt="icon instagram" />
+            </div>
+            <div class="views-content flex-content">
+              <p class="total">52k</p>
+              <div class="flex-content">
+                <img src="./img/icon-up.svg" alt="icon up" />
+                <p class="up">1375%</p>
+              </div>
+            </div>
+          </div>
+
+          <div id="twitter-retweets" class="views">
+            <div class="views-title flex-content">
+              <h3>Retweets</h3>
+              <img src="./img/icon-twitter.svg" alt="icon twitter" />
+            </div>
+            <div class="views-content flex-content">
+              <p class="total">117</p>
+              <div class="flex-content">
+                <img src="./img/icon-up.svg" alt="icon up" />
+                <p class="up">303%</p>
+              </div>
+            </div>
+          </div>
+
+          <div id="twitter-likes" class="views">
+            <div class="views-title flex-content">
+              <h3>Likes</h3>
+              <img src="./img/icon-twitter.svg" alt="icon twitter" />
+            </div>
+            <div class="views-content flex-content">
+              <p class="total">507</p>
+              <div class="flex-content">
+                <img src="./img/icon-up.svg" alt="icon up" />
+                <p class="up">553%</p>
+              </div>
+            </div>
+          </div>
+
+          <div id="youtube-likes" class="views">
+            <div class="views-title flex-content">
+              <h3>Likes</h3>
+              <img src="./img/icon-youtube.svg" alt="icon youtube" />
+            </div>
+            <div class="views-content flex-content">
+              <p class="total">107</p>
+              <div class="flex-content">
+                <img src="./img/icon-down.svg" alt="icon down" />
+                <p class="down">19%</p>
+              </div>
+            </div>
+          </div>
+
+          <div id="youtube-views" class="views">
+            <div class="views-title flex-content">
+              <h3>Total Views</h3>
+              <img src="./img/icon-youtube.svg" alt="icon youtube" />
+            </div>
+            <div class="views-content flex-content">
+              <p class="total">1407</p>
+              <div class="flex-content">
+                <img src="./img/icon-down.svg" alt="icon down" />
+                <p class="down">12%</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
     <script src="./js/app.js"></script>
   </body>
 </html>
