--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
     <title>Social Media Dashboard</title>
   </head>
   <body>
-    <header class="flex-content">
+    <header id="title" class="flex-content">
       <div class="title-content">
         <h1>Social Media Dashboard</h1>
         <p>Total Followers: <span id="total_followers">23,004</span></p>
       </div>
-      <div class="dark-mode flex-content">
+      <div class="light-mode flex-content">
         <p>Dark Mode</p>
         <label class="switch">
-          <input type="checkbox" />
+          <input id="switch" type="checkbox" />
           <span class="slider round"></span>
         </label>
       </div>
@@ -23,7 +23,7 @@
 
     <main>
       <section class="all-social-medias grid-content">
-        <div class="social-medias flex-content facebook">
+        <div class="cards social-medias flex-content facebook">
           <div class="social-medias-user flex-content">
             <img src="./img/icon-facebook.svg" alt="icon facebook" />
             <p>@muriloviscondi</p>
@@ -38,7 +38,7 @@
           </div>
         </div>
 
-        <div class="social-medias flex-content twitter">
+        <div class="cards social-medias flex-content twitter">
           <div class="social-medias-user flex-content">
             <img src="./img/icon-twitter.svg" alt="icon twitter" />
             <p>@muriloviscondi</p>
@@ -53,7 +53,7 @@
           </div>
         </div>
 
-        <div class="social-medias flex-content instagram">
+        <div class="cards social-medias flex-content instagram">
           <div class="social-medias-user flex-content">
             <img src="./img/icon-instagram.svg" alt="icon instagram" />
             <p>@muriloviscondi</p>
@@ -68,7 +68,7 @@
           </div>
         </div>
 
-        <div class="social-medias flex-content youtube">
+        <div class="cards social-medias flex-content youtube">
           <div class="social-medias-user flex-content">
             <img src="./img/icon-youtube.svg" alt="icon youtube" />
             <p>@muriloviscondi</p>
@@ -90,7 +90,7 @@
         </header>
 
         <div class="all-views grid-content">
-          <div id="facebook-users" class="views">
+          <div id="facebook-users" class="cards views">
             <div class="views-title flex-content">
               <h3>Page Views</h3>
               <img src="./img/icon-facebook.svg" alt="icon facebook" />
@@ -104,7 +104,7 @@
             </div>
           </div>
 
-          <div id="facebook-like" class="views">
+          <div id="facebook-like" class="cards views">
             <div class="views-title flex-content">
               <h3>Likes</h3>
               <img src="./img/icon-facebook.svg" alt="icon facebook" />
@@ -118,7 +118,7 @@
             </div>
           </div>
 
-          <div id="instagram-likes" class="views">
+          <div id="instagram-likes" class="cards views">
             <div class="views-title flex-content">
               <h3>Likes</h3>
               <img src="./img/icon-instagram.svg" alt="icon instagram" />
@@ -132,7 +132,7 @@
             </div>
           </div>
 
-          <div id="instagram-profile-views" class="views">
+          <div id="instagram-profile-views" class="cards views">
             <div class="views-title flex-content">
               <h3>Profile Views</h3>
               <img src="./img/icon-instagram.svg" alt="icon instagram" />
@@ -146,7 +146,7 @@
             </div>
           </div>
 
-          <div id="twitter-retweets" class="views">
+          <div id="twitter-retweets" class="cards views">
             <div class="views-title flex-content">
               <h3>Retweets</h3>
               <img src="./img/icon-twitter.svg" alt="icon twitter" />
@@ -160,7 +160,7 @@
             </div>
           </div>
 
-          <div id="twitter-likes" class="views">
+          <div id="twitter-likes" class="cards views">
             <div class="views-title flex-content">
               <h3>Likes</h3>
               <img src="./img/icon-twitter.svg" alt="icon twitter" />
@@ -174,7 +174,7 @@
             </div>
           </div>
 
-          <div id="youtube-likes" class="views">
+          <div id="youtube-likes" class="cards views">
             <div class="views-title flex-content">
               <h3>Likes</h3>
               <img src="./img/icon-youtube.svg" alt="icon youtube" />
@@ -188,7 +188,7 @@
             </div>
           </div>
 
-          <div id="youtube-views" class="views">
+          <div id="youtube-views" class="cards views">
             <div class="views-title flex-content">
               <h3>Total Views</h3>
               <img src="./img/icon-youtube.svg" alt="icon youtube" />
